force-app/main/default/objects/d4c_LineOfAuthority__c/fields/d4c_CEAsOfDate__c.field-meta.xml
<CustomField>
    <fullName>d4c_CEAsOfDate__c</fullName>
    <label>CE As Of Date</label>
    <type>Date</type>
</CustomField>