force-app/main/default/objects/d4c_LineOfAuthority__c/fields/d4c_CERenewalDate__c.field-meta.xml
<CustomField>
    <fullName>d4c_CERenewalDate__c</fullName>
    <label>CE Renewal Date</label>
    <type>Date</type>
</CustomField>