force-app/main/default/objects/d4c_LineOfAuthority__c/fields/d4c_CEStatusDescription__c.field-meta.xml
<CustomField>
    <fullName>d4c_CEStatusDescription__c</fullName>
    <label>CE Status Description</label>
    <type>TextArea</type>
</CustomField>