force-app/main/default/objects/d4c_LineOfAuthority__c/fields/d4c_CEUnitsRemainingMeasure__c.field-meta.xml
<CustomField>
    <fullName>d4c_CEUnitsRemainingMeasure__c</fullName>
    <label>CE Units Remaining Measure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>