force-app/main/default/objects/d4c_LineOfAuthority__c/fields/d4c_IsProductMatched__c.field-meta.xml
<CustomField>
    <fullName>d4c_IsProductMatched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Product Matched</label>
    <type>Checkbox</type>
</CustomField>