force-app/main/default/objects/d4c_LineOfAuthority__c/fields/d4c_License__c.field-meta.xml
<CustomField>
    <fullName>d4c_License__c</fullName>
    <label>License</label>
    <referenceTo>d4c_License__c</referenceTo>
    <relationshipLabel>NIPR Lines Of Authority</relationshipLabel>
    <relationshipName>Lines_Of_Authority</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>