force-app/main/default/objects/d4c_LineOfAuthority__c/fields/d4c_LineOfAuthorityCode__c.field-meta.xml
<CustomField>
    <fullName>d4c_LineOfAuthorityCode__c</fullName>
    <label>Line Of Authority Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>