force-app/main/default/objects/d4c_LineOfAuthority__c/fields/d4c_StateOrProvinceName__c.field-meta.xml
<CustomField>
    <fullName>d4c_StateOrProvinceName__c</fullName>
    <label>State Or Province Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>