force-app/main/default/objects/d4c_LineOfAuthority__c/fields/d4c_StatusDescription__c.field-meta.xml
<CustomField>
    <fullName>d4c_StatusDescription__c</fullName>
    <label>Status Description</label>
    <type>TextArea</type>
</CustomField>